fix second section mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -730,6 +730,9 @@
 			}
 		}
 	}
+	.custom-padding-left{
+		padding-left: 0;
+	}
 }
 @media (max-width: 470px){
 	.message-for-editor-section{
